[project]
name = "mongomover"
version = "2024.01"
description = "Transfer records between MongoDB instances"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Luigi Palumbo" }]
maintainers = [{ name = "Luigi Palumbo" }]
keywords = ["mongodb", "database", "migration", "transfer", "flet", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
requires-python = ">=3.10"
dependencies = [
    "flet==0.80.5",
    "pymongo>=4.16",
]

[project.urls]
Homepage = "https://luibao.com"
Documentation = "https://github.com/paluigi/mongomover#readme"
Repository = "https://github.com/paluigi/mongomover"
Issues = "https://github.com/paluigi/mongomover/issues"

[project.scripts]
mongomover = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
